--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -1,6 +1,6 @@
 site:
   title: "#help"
-  start_page: index.adoc
+  start_page: help-website::index.adoc
   url: https://www.ircnethelp.org
 content:
   sources:
